chore : complete slice 7
